# IlliniGuide

./: .env.example  .gitignore  AGENTS.md  PROJECT_SOP.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: chat.py  compare.py  metrics.py  recommend.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/ingestion/: career_tags.py  catalog_details.py  course_catalog.py  cs_catalog.py  ece_prereqs.py  embed_chunks.py  gpa.py
backend/app/observability/: __init__.py  metrics.py
backend/evaluation/: retrieval_cases.v1.json
backend/scripts/: benchmark.py  enrich_catalog_details.py  eval_retrieval.py  gpu_sampler.py  ingest_course_catalogs.py  ingest_cs_courses.py  ingest_ece_prereqs.py  ingest_embeddings.py  ingest_gpa.py  init_db.py  seed_career_tags.py  verify_embedding_ingestion.py  verify_vllm.py  vllm_metrics_snapshot.py
backend/tests/: test_answer_synthesis.py  test_api.py  test_benchmark.py  test_catalog_details.py  test_chunker.py  test_compare_tools.py  test_course_tools.py  test_db_init.py  test_db_models.py  test_dispatcher.py  test_embed_chunks.py  test_embeddings.py  test_eval.py  test_gpa_tools.py  test_gpu_sampler.py  test_ingest_ece_prereqs.py  test_ingest_gpa.py  test_llm_client.py  test_metrics.py  test_observability_assets.py  test_pgvector_retriever.py  test_prereq_tools.py  test_prompt_templates.py  test_rag.py  test_recommend_tools.py  test_router.py  test_search_tools.py  test_seed_career_tags.py  test_trace.py  test_verify_embedding_ingestion.py  test_vllm_backend.py
(+83 files in other folders)
