[project]
name = "illiniguideserve-backend"
version = "0.1.0"
description = "FastAPI backend for IlliniGuide Serve."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
